<resources>
    <string name="app_name">PassDataBetweenActivities</string>
    <string name="title">Membership Form</string>
    <string name="full_name">Full name</string>
    <string name="full_name_placeholder">Full name: %s</string>
    <string name="gender">Gender</string>
    <string name="gender_placeholder">Gender: %s</string>
    <string name="current_weight">Current Weight</string>
    <string name="current_weight_placeholder">Current Weight: %s</string>
    <string name="height">Height</string>
    <string name="height_placeholder">Height: %s</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="goal_weight_placeholder">Goal Weight: %s</string>
    <string name="phone">Phone</string>
    <string name="phone_placeholder">Phone: %s</string>
    <string name="address">Address</string>
    <string name="address_placeholder">Address: %s</string>
    <string name="age">Age</string>
    <string name="age_placeholder">Age: %s</string>
    <string name="conditions">I have read, understood and accepted membership rules</string>
    <string name="checked">Checked</string>
    <string name="checked_placeholder">Checked: %s</string>
</resources>